# teql

./: README.md  pyproject.toml
teql/: __init__.py  __main__.py  ast.py  cli.py  context.py  editor.py  exceptions.py  file_map.py  grammar.lark  grammar.py  interactive_shell.py  operation.py  parse_nodes.py  parser.py  range.py  teql.py
test/: __init__.py  context_test.py  editor_test.py  evaluate_selections_test.py  evaluate_updates_test.py  file_map_test.py  full_test.py  parser_test.py  utility_tests.py
test/files/: aristotle.html
