[tool.poetry]
name = "teql"
version = "0.1.0"
description = "The functionality of sed and grep, with the syntax of SQL"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lark = "^1.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
